[tool.poetry]
name = "rj-pylox"
version = "0.0.1"
description = "Project for learning how to create a programing language"
authors = ["ramtinJ95 <ramme95@gmail.com>"]
maintainers = ["Ramtin"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
ruff = "^0.6.1"
mypy = "^1.11.1"

[tool.ruff]
indent-width = 4
line-length = 100
show-fixes = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

