[project]
name = "rj-pylox"
version = "0.0.1"
description = "Project for learning how to create a programing language"
authors = [{ name = "ramtinJ95", email = "ramme95@gmail.com" }]
maintainers = [{ name = "Ramtin" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"

[project.optional-dependencies]
dev = ["ruff>=0.6.1", "mypy>=1.11.1"]

[tool.ruff]
indent-width = 4
line-length = 100
show-fixes = true

[dependency-groups]
dev = ["mypy>=1.17.1", "ruff>=0.12.10"]
